--- a/Guia2015/Ej54-Libreria/Ej54-Libreria.csproj
+++ b/Guia2015/Ej54-Libreria/Ej54-Libreria.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30CDD811-276C-4D00-8F6E-64753D5C9132}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{D77EC0B4-CF61-4859-9BA2-9E2014A7B86B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ej54</RootNamespace>
-    <AssemblyName>Ej53</AssemblyName>
+    <RootNamespace>Ej54_Libreria</RootNamespace>
+    <AssemblyName>Ej53-Libreria</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,16 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Centralita.cs" />
+    <Compile Include="CentralitaException.cs" />
+    <Compile Include="Llamada.cs" />
+    <Compile Include="Local.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provincial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ej53-Libreria\Ej53-Libreria.csproj">
-      <Project>{b3004f4f-7c60-40fb-bf3a-fcd1a1d47296}</Project>
-      <Name>Ej53-Libreria</Name>
+    <ProjectReference Include="..\Ej54-CentralitaSerializacion\Ej54-CentralitaSerializacion.csproj">
+      <Project>{dee7b68d-3c99-45fc-856c-e228a0ca0ffc}</Project>
+      <Name>Ej54-CentralitaSerializacion</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
