--- a/MostradosEnClase/Clase-10-Ejemplo PPT/Clase-10-Ejemplo PPT.csproj
+++ b/MostradosEnClase/Clase-10-Ejemplo PPT/Clase-10-Ejemplo PPT.csproj
@@ -46,16 +46,16 @@
   <ItemGroup>
     <Compile Include="C-Derivada.cs" />
     <Compile Include="C.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmTransparente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmTransparente.Designer.cs">
+      <DependentUpon>FrmTransparente.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmTransparente.resx">
+      <DependentUpon>FrmTransparente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
