--- a/MostradosEnClase/Clase-21-Entidades/app.config
+++ b/MostradosEnClase/Clase-21-Entidades/app.config
@@ -8,10 +8,10 @@
     <userSettings>
         <Entidades.Properties.Settings>
             <setting name="CadenaConexion" serializeAs="String">
-                <value>Data Source=LAB3PCPROFESOR\SQLEXPRESS;Initial Catalog=mibasededatos;Integrated Security=True</value>
+                <value>Data Source=.\SQLEXPRESS;Initial Catalog=mibasededatos;Integrated Security=True</value>
             </setting>
             <setting name="CadenaConexionMDE" serializeAs="String">
-                <value>Data Source=I05\SQLEXPRESS2014;Initial Catalog=mibasededatos;Integrated Security=True</value>
+                <value>Data Source=.\SQLEXPRESS2014;Initial Catalog=mibasededatos;Integrated Security=True</value>
             </setting>
         </Entidades.Properties.Settings>
     </userSettings>
